# pyrailroad

./: .coveragerc  .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties  sonar-projet.properties  tests.py
.github/workflows/: build.yml  docs.yml  publish.yml
cli/: index.html
cli/base_elem/: index.html
cli/block_elem/: index.html
cli/text_elem/: index.html
docs/: mkdocs.yml
docs/docs/: gallery.md  index.md  release-notes.md
gallery/: index.html
license/: index.html
release-notes/: index.html
search/: search_index.json
src/pyrailroad/: __init__.py  cli.py  defaults.py  ebnf_parser.py  elements.py  exceptions.py  parser.py  railroad.py  utils.py
tests/: alternating_sequence_text.txt  arrow_left_text.txt  arrow_right_text.txt  arrow_undirected_text.txt  choice0_text.txt  choice1_text.txt  comment_text.txt  end_complex_text.txt  end_sql_text.txt  expression_text.txt  group_label_text.txt  group_no_label_text.txt  horizontal_choice_text.txt  multiple_choice0_all_text.txt  multiple_choice0_any_text.txt  multiple_choice1_all_text.txt  multiple_choice1_any_text.txt  non_terminal_text.txt  one_or_more_repeat_text.txt  one_or_more_skip_text.txt  optional_no_skip_text.txt  optional_sequence_text.txt  optional_skip_text.txt  sequence_text.txt  stack_text.txt  start_complex_text.txt  start_label_text.txt  start_simple_text.txt  start_sql_text.txt  terminal_text.txt  zero_or_more_repeat0_text.txt  zero_or_more_repeat1_text.txt  zero_or_more_skip0_text.txt  zero_or_more_skip1_text.txt
(+33 files in other folders)
