[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrailroad"
authors = [
    {name = "Rafael Lopez", email = "rafael.lopez@universite-paris-saclay.fr"},
]
description = "Python package to draw railroad (or syntax) diagrams. Based largely on railroad-diagram and the partial parser by tabatkins."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["railroad", "diagram"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer[all]", "pyyaml", "DHParser==1.8.3"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyrailroad.VERSION"}

[project.optional-dependencies]
tests = ["pytest", "coverage"]
documentation = ["mkdocs", "mkdocs-material", "mkdocs-plugin-inline-svg", "mkdocstrings[python]", "markdown-exec"]

[project.scripts]
py-railroad = "pyrailroad.cli:cli"
